Fix layout on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -60,8 +60,7 @@ form {
 }
 
 #text-box {
-    margin-left: 48px;
-    margin-bottom: 1px;
+    margin: 0px 0px 1px 48px;
     width: 240px;
     height: 21px;
 }
@@ -86,8 +85,9 @@ form {
 /* Submit location button -------------------------------------------------- */
 
 #city-submit {
-    margin: 20px 10px 10px 125px;
+    margin: 20px auto 10px auto;
     font-size: 18px;
+    display: block;
     width: 180px;
 }
 
@@ -113,16 +113,23 @@ form {
 }
 
 #icon {
-    margin-left: 145px;
+    display: block;
+    margin: 0px auto 0px auto;
+}
+
+#temp-container {
+    width: 150px;
+    margin: 0px auto 20px auto;
 }
 
 #temp {
-    margin-left: 145px;
-    display: inline-block;
+    margin-left: 28px;
+    display: inline;
 }
 
 #standard-btn {
-    margin-left: 20px;
+    display: inline-block;
+    margin-left: 10px;
     font-size: 14px;
     color: rgb(38, 91, 143);
     background-color: rgba(250, 235, 215, 0);
@@ -190,9 +197,9 @@ form {
     margin: 140px auto 0px auto;
     width: 140px;
     height: 35px;
-    border-radius: 11px;
+    border-radius: 10px;
     color: gold;
-    font-size: 18px;
+    font-size: 19px;
     font-family: verdana;
     padding-top: 1px;
     box-shadow: 1px 3.5px 3px 0px rgb(27, 26, 26);    
@@ -210,4 +217,45 @@ form {
     -moz-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
+}
+
+/* MEDIA QUERIES ----------------------------------------------------------- */
+
+@media only screen and (max-width: 500px) {
+    #gh-bar {
+        margin-bottom: 25px;
+    }
+
+    #form-header {
+        margin-top: 10px;
+    }
+
+    #display-box {
+        width: 280px;
+    }
+
+    #form-box {
+        width: 280px;
+        margin: 0px auto 0px auto;
+    }
+
+    .form-title {
+        margin-left: -52%;
+        /* text-align: center; */
+    }
+
+    #input-form {
+        width: 280px;
+    }
+
+    #text-box {
+        width: 175px;
+        margin: 0 0 1px 10px;
+    }
+
+    #back-button {
+        margin-top: 85px;
+        height: 30px;
+        font-size: 18px;
+    }
 }
